# eidolon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: SECURITY.md
deploy/linux/: install.sh  uninstall.sh
deploy/windows/: inno_setup_script.iss  inno_setup_script.txt
src/: core.rs  main.rs
